tests/purs/passing/ModuleExportDupes/B.purs
module B (module Prelude) where

import Prelude
