tests/purs/failing/ExportConflictType/B.purs
module B where

data T
